{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 17,
  "lineage": "6c91679c-10ab-eae7-3d55-14a0ea2dca55",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3111"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-21T02:33:02.056-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-5d6ad089-c857-4697-9ad/global/firewalls/iii-vpc-dev-allow-http-gateway",
            "log_config": [],
            "name": "iii-vpc-dev-allow-http-gateway",
            "network": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/networks/iii-vpc-dev",
            "priority": 1000,
            "project": "project-5d6ad089-c857-4697-9ad",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/firewalls/iii-vpc-dev-allow-http-gateway",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "iii-gateway"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-05-21T02:33:02.024-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-5d6ad089-c857-4697-9ad/global/firewalls/iii-vpc-dev-allow-internal",
            "log_config": [],
            "name": "iii-vpc-dev-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/networks/iii-vpc-dev",
            "priority": 1000,
            "project": "project-5d6ad089-c857-4697-9ad",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/firewalls/iii-vpc-dev-allow-internal",
            "source_ranges": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-21T02:33:01.774-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-5d6ad089-c857-4697-9ad/global/firewalls/iii-vpc-dev-allow-ssh",
            "log_config": [],
            "name": "iii-vpc-dev-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/networks/iii-vpc-dev",
            "priority": 1000,
            "project": "project-5d6ad089-c857-4697-9ad",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/firewalls/iii-vpc-dev-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-5d6ad089-c857-4697-9ad/global/networks/iii-vpc-dev",
            "mtu": 0,
            "name": "iii-vpc-dev",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3557521822329302992",
            "project": "project-5d6ad089-c857-4697-9ad",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/networks/iii-vpc-dev"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-21T02:33:02.818-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/project-5d6ad089-c857-4697-9ad/regions/us-central1/routers/iii-vpc-dev-router",
            "name": "iii-vpc-dev-router",
            "network": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/networks/iii-vpc-dev",
            "project": "project-5d6ad089-c857-4697-9ad",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/regions/us-central1/routers/iii-vpc-dev-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "project-5d6ad089-c857-4697-9ad/us-central1/iii-vpc-dev-router/iii-vpc-dev-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "iii-vpc-dev-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "project-5d6ad089-c857-4697-9ad",
            "region": "us-central1",
            "router": "iii-vpc-dev-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/regions/us-central1/subnetworks/iii-vpc-dev-private",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-21T02:33:02.997-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/project-5d6ad089-c857-4697-9ad/regions/us-central1/subnetworks/iii-vpc-dev-private",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "iii-vpc-dev-private",
            "network": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/networks/iii-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-5d6ad089-c857-4697-9ad",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/regions/us-central1/subnetworks/iii-vpc-dev-private",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-21T02:33:02.832-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/project-5d6ad089-c857-4697-9ad/regions/us-central1/subnetworks/iii-vpc-dev-public",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "iii-vpc-dev-public",
            "network": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/networks/iii-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-5d6ad089-c857-4697-9ad",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/regions/us-central1/subnetworks/iii-vpc-dev-public",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "caller",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260520",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/zones/us-central1-a/disks/iii-caller-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-5d6ad089-c857-4697-9ad/zones/us-central1-a/instances/iii-caller-worker",
            "instance_id": "5532538172340400013",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "vishal:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIMpyZinUZUXGiK6cqCTnbDSmRGZShpkmSY0RauX433lE vishal@vishal-HP-Laptop-15s-fr2xxx",
              "startup-script": "#!/bin/bash\napt-get update\napt-get install -y curl git build-essential\n      \n# Install Node.js 20\ncurl -fsSL https://deb.nodesource.com/setup_20.x | bash -\napt-get install -y nodejs\n"
            },
            "metadata_fingerprint": "PWrmB9Q-Irg=",
            "name": "iii-caller-worker",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/networks/iii-vpc-dev",
                "network_ip": "10.0.2.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/regions/us-central1/subnetworks/iii-vpc-dev-private",
                "subnetwork_project": "project-5d6ad089-c857-4697-9ad"
              }
            ],
            "project": "project-5d6ad089-c857-4697-9ad",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/zones/us-central1-a/instances/iii-caller-worker",
            "service_account": [
              {
                "email": "363412976840-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "iii-node"
            ],
            "tags_fingerprint": "_TUcyoS8Tfw=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.private",
            "module.vm.data.google_compute_image.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "engine",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260520",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/zones/us-central1-a/disks/iii-engine-gateway"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-5d6ad089-c857-4697-9ad/zones/us-central1-a/instances/iii-engine-gateway",
            "instance_id": "3400083104535375792",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "vishal:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIMpyZinUZUXGiK6cqCTnbDSmRGZShpkmSY0RauX433lE vishal@vishal-HP-Laptop-15s-fr2xxx",
              "startup-script": "#!/bin/bash\napt-get update\napt-get install -y curl git build-essential ufw\n      \n# Install iii\ncurl -fsSL https://install.iii.dev/iii/main/install.sh | sh\n      \n# Copy binaries to /usr/local/bin so they are globally available for systemd and all users\nif [ -f /root/.local/bin/iii ]; then\n  cp /root/.local/bin/iii* /usr/local/bin/\nfi\n      \n# Also install for default vishal user just in case\nsudo -u vishal curl -fsSL https://install.iii.dev/iii/main [...]
            },
            "metadata_fingerprint": "WxrfQDJN7iA=",
            "name": "iii-engine-gateway",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.239.123.59",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/networks/iii-vpc-dev",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/regions/us-central1/subnetworks/iii-vpc-dev-public",
                "subnetwork_project": "project-5d6ad089-c857-4697-9ad"
              }
            ],
            "project": "project-5d6ad089-c857-4697-9ad",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/zones/us-central1-a/instances/iii-engine-gateway",
            "service_account": [
              {
                "email": "363412976840-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "iii-gateway",
              "iii-node"
            ],
            "tags_fingerprint": "fo8_Mwnn7AY=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.public",
            "module.vm.data.google_compute_image.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "inference",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260520",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/zones/us-central1-a/disks/iii-inference-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-5d6ad089-c857-4697-9ad/zones/us-central1-a/instances/iii-inference-worker",
            "instance_id": "7261200111695523725",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "vishal:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIMpyZinUZUXGiK6cqCTnbDSmRGZShpkmSY0RauX433lE vishal@vishal-HP-Laptop-15s-fr2xxx",
              "startup-script": "#!/bin/bash\napt-get update\napt-get install -y curl git python3 python3-pip python3-venv build-essential\n"
            },
            "metadata_fingerprint": "3qnfIoVFBJQ=",
            "name": "iii-inference-worker",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/global/networks/iii-vpc-dev",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/regions/us-central1/subnetworks/iii-vpc-dev-private",
                "subnetwork_project": "project-5d6ad089-c857-4697-9ad"
              }
            ],
            "project": "project-5d6ad089-c857-4697-9ad",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-5d6ad089-c857-4697-9ad/zones/us-central1-a/instances/iii-inference-worker",
            "service_account": [
              {
                "email": "363412976840-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "iii-node"
            ],
            "tags_fingerprint": "_TUcyoS8Tfw=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.private",
            "module.vm.data.google_compute_image.ubuntu"
          ]
        }
      ]
    }
  ]
}